--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
 </section>
 
   <div class="clouds">
-    <img src="/Images/cloud1.svg" alt="" class="c1" >
-    <img src="/Images/cloud2.svg" alt=""   class ="c2" > 
-    <img src="/Images/cloud3.svg" alt=""   class ="c3" > 
-    <img src="/Images/cloud3.svg" alt=""   class ="c3" > 
-    <img src="/Images/cloud4.svg" alt=""   class ="c4" > 
-    <img src="/Images/cloud5.svg" alt=""   class ="c6" > 
-    <img src="/Images/cloud2.svg" alt=""   class ="c5" > 
+    <img src="Images/cloud1.svg" alt="" class="c1" >
+    <img src="Images/cloud2.svg" alt=""   class ="c2" > 
+    <img src="Images/cloud3.svg" alt=""   class ="c3" > 
+    <img src="Images/cloud3.svg" alt=""   class ="c3" > 
+    <img src="Images/cloud4.svg" alt=""   class ="c4" > 
+    <img src="Images/cloud5.svg" alt=""   class ="c6" > 
+    <img src="Images/cloud2.svg" alt=""   class ="c5" > 
   
 
 </div>
