--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                         <h3 class="mb-4">2500$</h3>
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quia sequi maxime ea deserunt ab ratione ex veniam! Maxime commodi itaque ratione est quia tempora enim laborum nesciunt nulla voluptates!</p>
                           <div class="d-flex justify-content-center mb-2 pkg-item-btns">
-                            <a href="./Booking/Booking.html" class="btn btn-sm px-3" style="border-radius: 0 30px 30px 0;"> احجـــز الآن</a>
+                            <a href="Booking/Booking.html" class="btn btn-sm px-3" style="border-radius: 0 30px 30px 0;"> احجـــز الآن</a>
                             <a href="" class="btn btn-sm px-3" style="border-radius:30px 0 0 30px;">تفاصيل الباقة</a>
                          </div>
                     </div>
@@ -255,7 +255,7 @@
                         <h3 class="mb-4">2000$</h3>
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quia sequi maxime ea deserunt ab ratione ex veniam! Maxime commodi itaque ratione est quia tempora enim laborum nesciunt nulla voluptates!</p>
                           <div class="d-flex justify-content-center mb-2 pkg-item-btns">
-                            <a href="/Booking/Booking.html" class="btn btn-sm px-3 " style="border-radius: 0 30px 30px 0;"> احجـــز الآن</a>
+                            <a href="Booking/Booking.html" class="btn btn-sm px-3 " style="border-radius: 0 30px 30px 0;"> احجـــز الآن</a>
                             <a href="" class="btn btn-sm px-3 " style="border-radius:30px 0 0 30px;">تفاصيل الباقة</a>
                           </div>
                     </div>
@@ -279,7 +279,7 @@
                         <h3 class="mb-4">1000$</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quia sequi maxime ea deserunt ab ratione ex veniam! Maxime commodi itaque ratione est quia tempora enim laborum nesciunt nulla voluptates!</p>
                         <div class="d-flex justify-content-center mb-2 pkg-item-btns">
-                            <a href="/Booking/Booking.html" class="btn btn-sm px-3 " style="border-radius: 0 30px 30px 0;"> احجـــز الآن</a>
+                            <a href="Booking/Booking.html" class="btn btn-sm px-3 " style="border-radius: 0 30px 30px 0;"> احجـــز الآن</a>
                             <a href="" class="btn btn-sm px-3 " style="border-radius:30px 0 0 30px;">تفاصيل الباقة</a>
                           </div>
                     </div>
