--- a/index.html
+++ b/index.html
@@ -17,22 +17,6 @@
 
 <!--================= Header ======================
 
-<header>
-    <div class="container"></div>
-        <div class="bx bx-menu" id="menu-icon">
-            <ul class="navbar">
-                <li><a href="#about">عن رملــة</a></li>
-                <li><a href="#services">خدماتنـا</a></li>
-                <li><a href="#packages">الباقات السياحيـة</a></li>
-                <li><a href="#contact">تواصـل معنا</a></li>
-                <li><a href="#live">عيش التجربة</a></li>
-            </ul>
-    </div>
-    <div class="nav-btns">
-        <button class="sign-up-btn"> <a href="#">سجـل دخولـك</a></button>
-        <button class="visit-ramlah"> <a href="#">منتجــع رملــــة </a></button>
- </div>
-</header>=-->
 <section class="nav-section container">
 <nav class="navbar navbar-expand-lg navbar-light mt-4">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,7 +42,7 @@
         </li>
       </ul>
       <div class="nav-btns left-nav mt-4">
-        <button class="sign-up-btn"> <a href="0/Signing/signin.html">سجـل دخولـك</a></button>
+        <button class="sign-up-btn"> <a href="Signing/signin.html">سجـل دخولـك</a></button>
     </div>
     </div>
   </nav>
