--- a/Booking/Booking.html
+++ b/Booking/Booking.html
@@ -479,8 +479,8 @@
     <div class="container py-5" id="contact">
         <div class="row g-5">
             <div class="d-flex footer-decor">
-                <img src="./Images/footer-img.png" alt="">
-                <img src="./Images/footer-img.png" alt="">
+                <img src="Images/footer-img.png" alt="">
+                <img src="Images/footer-img.png" alt="">
 
               
             </div>
