--- a/Booking/Booking.html
+++ b/Booking/Booking.html
@@ -13,11 +13,12 @@
 </head>
 <body>
  <!--================== Header ==========================-->
+
  <nav class="navbar navbar-expand-lg navbar-light mx-auto px-5 py-4">
     <div class="container-fluid">
         <!-- Logo -->
         <div class="logo">
-            <a href="../index.html" class="navbar-brand flex-grow-1" style="height: 100px;"><img src="../Images/sh-brown-logo.png"  class="img-fluid"></a>
+            <a href="../index.html" class="navbar-brand flex-grow-1" style="height: 100px;"><img src="../Images/sh-brown-logo.png" alt="ramlah-logo" class="img-fluid"></a>
         </div>
 
             <!-- Navbar button -->
@@ -479,8 +480,8 @@
     <div class="container py-5" id="contact">
         <div class="row g-5">
             <div class="d-flex footer-decor">
-                <img src="Images/footer-img.png" alt="">
-                <img src="Images/footer-img.png" alt="">
+                <img src="../Images/footer-img.png" alt="">
+                <img src="../Images/footer-img.png" alt="">
 
               
             </div>
