--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<!--================= Header ======================
+<!--================= Header ======================-->
 
 <section class="nav-section container">
 <nav class="navbar navbar-expand-lg navbar-light mt-4">
